--- a/template.tex
+++ b/template.tex
@@ -647,7 +647,7 @@ modint C(int n, int m) {
 
 $n$ 个球，$m$ 个盒
 
-\begin{figure}
+\begin{figure}[H]
     \flushleft
     \includegraphics[]{box-and-ball.png}
     \label{fig:left}
