--- a/template.tex
+++ b/template.tex
@@ -728,8 +728,8 @@ Mat ksm(Mat a, ll b) {
 \section{计算几何}
 
 \begin{lstlisting}[style=cpp]
-const double PI = acos(-1);
-constexpr double eps = 1e-8;
+double PI = acos(-1);
+double eps = 1e-8;
 using T = ll;
 
 template <typename T>
