--- a/template.tex
+++ b/template.tex
@@ -527,6 +527,8 @@ auto kmp(string& s) {
         if (s[i] == s[j + 1]) j++;
         next[i] = j;
     }
+    // next 意为长度
+    for (auto& i : next) i++;
     return next;
 }
 \end{lstlisting}
