--- a/template.tex
+++ b/template.tex
@@ -609,6 +609,49 @@ void manacher(const string& _s, vector<int>& r) {
 
 \section{数学}
 
+\subsection{扩展欧几里得}
+
+$x=x+k*dx,y=y-k*dy$
+
+若要求 $x>0$，$k>-\frac{x}{dx}\Rightarrow k\ge\lceil \frac{-x+1}{dx}\rceil$
+
+若要求 $x\ge0$，$k>-\frac{x}{dx}\Rightarrow k\ge\lceil -\frac{x}{dx}\rceil$
+
+若要求 $y>0$，$k<\frac{y}{dy}\Rightarrow k\le\lfloor \frac{y-1}{dy}\rfloor$
+
+若要求 $y\ge0$，$k<\frac{y}{dy}\Rightarrow k\le\lceil \frac{y}{dy}\rceil$
+
+
+\begin{lstlisting}[style=cpp]
+int __exgcd(int a, int b, int& x, int& y) {
+    if (!b) {
+        x = 1;
+        y = 0;
+        return a;
+    }
+    int d = __exgcd(b, a % b, x, y);
+    int t = x;
+    x = y;
+    y = t - (a / b) * y;
+    return d;
+}
+array<int, 2> exgcd(int a, int b, int c) {
+    int x, y;
+    int gcd_a_b = __exgcd(a, b, x, y);
+    if (c % gcd_a_b) return {INT_MAX, INT_MAX};
+    x *= c / gcd_a_b;
+    y *= c / gcd_a_b;
+    int dx = b / gcd_a_b;
+    int dy = a / gcd_a_b;
+    x = x + k* dx y = y - k* dy
+                      // 调整为 x >=0 的最小解
+                      int k = ceil(-1.0 * x / dx);
+    x += k * dx;
+    y -= k * dy;
+    return {x, y};
+}
+\end{lstlisting}
+
 \subsection{线性筛法}
 
 \begin{lstlisting}[style=cpp]
