更新开栈说明

--- a/template.tex
+++ b/template.tex
@@ -1477,7 +1477,7 @@ if not errorlevel 1 goto again
 
 \subsection{开栈}
 
-任选一种
+不同的编译器可能命令不一样
 
 \begin{lstlisting}[style=cpp]
 -Wl,--stack=0x10000000
