--- a/template.tex
+++ b/template.tex
@@ -619,7 +619,7 @@ $x=x+k*dx,y=y-k*dy$
 
 若要求 $y>0$，$k<\frac{y}{dy}\Rightarrow k\le\lfloor \frac{y-1}{dy}\rfloor$
 
-若要求 $y\ge0$，$k<\frac{y}{dy}\Rightarrow k\le\lceil \frac{y}{dy}\rceil$
+若要求 $y\ge0$，$k<\frac{y}{dy}\Rightarrow k\le\lfloor \frac{y}{dy}\rfloor$
 
 
 \begin{lstlisting}[style=cpp]
@@ -655,40 +655,116 @@ array<int, 2> exgcd(int a, int b, int c) {
 \subsection{线性筛法}
 
 \begin{lstlisting}[style=cpp]
-auto [min_prime, prime] = []() {
-    constexpr int N = 10000000;
-    vector<int> min_prime(N + 1, 0), prime;
+constexpr int N = 10000000;
+array<int, N + 1> min_prime;
+vector<int> primes;
+bool ok = []() {
     for (int i = 2; i <= N; i++) {
         if (min_prime[i] == 0) {
             min_prime[i] = i;
-            prime.push_back(i);
+            primes.push_back(i);
         }
-        for (auto& j : prime) {
+        for (auto& j : primes) {
             if (j > min_prime[i] || j > N / i) break;
             min_prime[j * i] = j;
         }
     }
-    return tuple{min_prime, prime};
+    return 1;
 }();
 \end{lstlisting}
 
 \subsection{分解质因数}
 
 \begin{lstlisting}[style=cpp]
-auto num_prime(int num) {
+auto getprimes(int n) {
     vector<array<int, 2>> res;
-    for (auto& i : prime) {
-        if (i > num / i) break;
-        if (num % i == 0) {
+    for (auto& i : primes) {
+        if (i > n / i) break;
+        if (n % i == 0) {
             res.push_back({i, 0});
-            while (num % i == 0) {
-                num /= i;
+            while (n % i == 0) {
+                n /= i;
                 res.back()[1]++;
             }
         }
     }
-    if (num > 1) res.push_back({num, 1});
+    if (n > 1) res.push_back({n, 1});
     return res;
+}
+\end{lstlisting}
+
+\subsection{pollard rho}
+
+\begin{lstlisting}[style=cpp]
+using LL = __int128_t;
+
+random_device rd;
+mt19937 seed(rd());
+
+ll power(ll a, ll b, ll mod) {
+    ll res = 1;
+    while (b) {
+        if (b & 1) res = (LL)res * a % mod;
+        a = (LL)a * a % mod;
+        b >>= 1;
+    }
+    return res;
+}
+
+bool isprime(ll n) {
+    static array primes{2, 3, 5, 7, 11, 13, 17, 19, 23};
+    static unordered_map<ll, bool> S;
+    if (n < 2) return 0;
+    if (S.count(n)) return S[n];
+    ll d = n - 1, r = 0;
+    while (!(d & 1)) {
+        r++;
+        d >>= 1;
+    }
+    for (auto& a : primes) {
+        if (a == n) return S[n] = 1;
+        ll x = power(a, d, n);
+        if (x == 1 || x == n - 1) continue;
+        for (int i = 0; i < r - 1; i++) {
+            x = (LL)x * x % n;
+            if (x == n - 1) break;
+        }
+        if (x != n - 1) return S[n] = 0;
+    }
+    return S[n] = 1;
+}
+
+ll pollard_rho(ll n) {
+    ll s = 0, t = 0;
+    ll c = seed() % (n - 1) + 1;
+    ll val = 1;
+    for (int goal = 1;; goal *= 2, s = t, val = 1) {
+        for (int step = 1; step <= goal; step++) {
+            t = ((LL)t * t + c) % n;
+            val = (LL)val * abs(t - s) % n;
+            if (step % 127 == 0) {
+                ll g = gcd(val, n);
+                if (g > 1) return g;
+            }
+        }
+        ll g = gcd(val, n);
+        if (g > 1) return g;
+    }
+}
+auto getprimes(ll n) {
+    unordered_set<ll> S;
+    auto get = [&](auto self, ll n) {
+        if (n < 2) return;
+        if (isprime(n)) {
+            S.insert(n);
+            return;
+        }
+        ll mx = pollard_rho(n);
+        self(self, n / mx);
+        self(self, mx);
+    };
+    get(get, n);
+    return S;
 }
 \end{lstlisting}
 
